# OC_Projet_10

./: .flake8  .gitignore  README.md  db.sqlite3  populate.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
SoftDesk/: settings.py  urls.py
api/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  views.py
api/migrations/: 0001_initial.py  0002_alter_comment_uuid.py  0003_remove_project_contributors_alter_user_age_and_more.py  0004_alter_contributor_user.py
